scaled down .carousal text font size in screen bigger than 1200px to stop text from overflowing out of the carousal

--- a/src/App.css
+++ b/src/App.css
@@ -277,7 +277,7 @@ and (min-width : 772px) {
 }
 
 @media only screen
-and (max-width : 1200px) {
+and (min-width : 1200px) {
   .carousal-title {
     font-size: 4vw;
   }
